--- a/package.json
+++ b/package.json
@@ -18,21 +18,27 @@
     },
     "workspaces": [
         "packages/**",
-        "examples/*"
+        "examples/*",
+        "shared/"
     ],
     "devDependencies": {
-        "@techor/jest-dom": "^2.2.1",
-        "@techor/repo": "^2.2.1",
+        "@techor/jest-dom": "^2.2.8",
+        "@techor/repo": "^2.2.8",
         "@types/jest": "^29.5.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "fast-glob": "^3.2.12",
+        "jest-extended": "^4.0.0",
         "nodemon": "^2.0.22",
         "pretty-ms": "^8.0.0",
         "puppeteer": "^19.8.5",
+        "shared": "",
         "shuffle-array": "^1.0.1",
         "strip-ansi": "^7.0.1",
-        "techor": "^2.2.1",
+        "techor": "^2.2.8",
         "ts-dedent": "^2.2.0",
+        "ts-jest": "^29.1.0",
+        "tsx": "^3.12.7",
+        "turbo": "^1.10.3",
         "upath": "^2.0.1"
     },
     "engines": {
