--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -15,8 +15,8 @@
     },
     "dependencies": {
         "@master/css": "",
-        "@master/css-compiler": "",
         "@master/css-language-service": "",
+        "explore-config": "^2.2.9",
         "file-uri-to-path": "^2.0.0",
         "js-beautify": "^1.14.7",
         "minimatch": "^5.1.2",
