--- a/packages/vscode-language-service/tsconfig.json
+++ b/packages/vscode-language-service/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "baseUrl": "."
+        "baseUrl": ".",
     },
     "include": [
         "src/**/*"
