--- a/examples/react-with-runtime-rendering/package.json
+++ b/examples/react-with-runtime-rendering/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "master-css-in-react",
+    "name": "react-with-runtime-rendering",
     "private": true,
     "version": "0.0.0",
     "type": "module",
