Fixed command not linking to project root after build completes

--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -2,6 +2,7 @@
     "name": "@master/css",
     "scripts": {
         "build": "techor pack --shakable",
+        "postbuild": "npm link ./",
         "dev": "npm run build -- --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
