--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -2,6 +2,7 @@
     "name": "@master/css-renderer",
     "scripts": {
         "build": "techor pack --platform node",
+        "postbuild": "npm link ./",
         "dev": "npm run build -- --watch",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
@@ -45,9 +46,7 @@
         "@techor/log": "^2.2.8",
         "commander": "^10.0.1",
         "explore-config": "^2.2.8",
-        "fast-glob": "^3.2.12",
-        "minimatch": "^5.1.1",
-        "upath": "^2.0.1"
+        "fast-glob": "^3.2.12"
     },
     "devDependencies": {
         "ts-jest": "^29.0.5",
