--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css-validator",
     "scripts": {
-        "build": "techor pack --platform node",
+        "build": "techor-pack --platform node",
         "dev": "npm run build -- --watch",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
