--- a/packages/extractor.webpack/package.json
+++ b/packages/extractor.webpack/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css-extractor.webpack",
     "scripts": {
-        "build": "techor pack --platform node",
+        "build": "techor-pack --platform node",
         "dev": "npm run build -- --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
