--- a/examples/nuxt.js-with-static-extraction/package.json
+++ b/examples/nuxt.js-with-static-extraction/package.json
@@ -9,7 +9,7 @@
     },
     "devDependencies": {
         "@master/css-extractor.vite": "",
-        "nuxt": "3.0.0",
+        "nuxt": "^3.5.3",
         "vite": "^4.0.1"
     }
 }
