--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,9 @@
             "cache": false,
             "dependsOn": [
                 "^build"
+            ],
+            "outputs": [
+                "dist/**"
             ]
         },
         "build": {
