--- a/examples/vite-with-runtime-rendering/package.json
+++ b/examples/vite-with-runtime-rendering/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "devDependencies": {
+        "typescript": "^5.1.3",
         "vite": "^4.3.9"
     },
     "dependencies": {
