--- a/examples/vite-with-static-extraction/package.json
+++ b/examples/vite-with-static-extraction/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "master-css-aot-in-vite",
+    "name": "vite-with-static-extraction",
     "private": true,
     "version": "0.0.0",
     "type": "module",
