--- a/examples/react-with-progressive-rendering/package.json
+++ b/examples/react-with-progressive-rendering/package.json
@@ -7,7 +7,7 @@
         "dev": "node server",
         "build": "npm run build:client && npm run build:server",
         "build:client": "vite build --outDir dist/client",
-        "build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server",
+        "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
         "generate": "vite build --outDir dist/static && npm run build:server && node prerender",
         "serve": "NODE_ENV=production node server",
         "debug": "node --inspect-brk server"
@@ -15,10 +15,11 @@
     "dependencies": {
         "@master/css.react": "",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.11.2"
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.6",
         "@vitejs/plugin-react": "^4.0.0",
         "compression": "^1.7.4",
         "express": "^4.18.2",
