--- a/examples/react-with-runtime-rendering/package.json
+++ b/examples/react-with-runtime-rendering/package.json
@@ -9,17 +9,20 @@
         "preview": "npm run build && vite preview"
     },
     "dependencies": {
-        "@master/css": "",
+        "@master/css.react": "",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@master/css.react": "",
-        "@master/css-extractor.vite": "",
-        "@types/react": "^18.0.27",
-        "@types/react-dom": "^18.0.10",
-        "@vitejs/plugin-react": "^3.1.0",
-        "typescript": "^4.9.3",
-        "vite": "^4.1.0"
+        "@types/react": "^18.0.37",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
+        "@typescript-eslint/parser": "^5.59.0",
+        "@vitejs/plugin-react": "^4.0.0",
+        "eslint": "^8.38.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.3.4",
+        "typescript": "^5.0.2",
+        "vite": "^4.3.9"
     }
 }
