--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -3,8 +3,8 @@
     "scripts": {
         "build:cjs": "esbuild src/index.ts --bundle --minify --outfile=dist/index.js --format=cjs --platform=node --external:@master/css --external:js-beautify",
         "build:type": "tsc --emitDeclarationOnly --preserveWatchOutput --outDir dist",
-        "build": "npm run build:cjs && npm run build:type",
-        "dev": "npm run build -- --watch",
+        "build": "conc 'npm:build:*'",
+        "dev": "conc 'npm:build:* -- --watch'",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
     },
