--- a/examples/webpack-with-static-extraction/package.json
+++ b/examples/webpack-with-static-extraction/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "npm run preview",
         "build": "webpack --mode=production --node-env=production",
-        "serve": "webpack serve --mode=development",
+        "dev": "webpack serve --mode=development",
         "preview": "webpack serve --mode=production"
     },
     "keywords": [],
@@ -14,12 +14,12 @@
     "license": "ISC",
     "devDependencies": {
         "@master/css-extractor.webpack": "",
-        "html-webpack-plugin": "^5.5.1",
-        "webpack": "^5.85.0",
-        "webpack-cli": "^5.1.1",
-        "webpack-dev-server": "^4.15.0",
         "css-loader": "^6.8.1",
+        "html-webpack-plugin": "^5.5.1",
         "style-loader": "^3.3.3",
-        "ts-loader": "^9.4.3"
+        "ts-loader": "^9.4.3",
+        "webpack": "^5.88.1",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
     }
 }
