--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -3,8 +3,8 @@
     "scripts": {
         "build:cjs": "esbuild src/server.ts --bundle --minify --outfile=dist/server.js --format=cjs --platform=node --external:vscode-languageserver --external:vscode-languageserver-textdocument --external:explore-config --external:js-beautify --external:minimatch --external:@master/css --external:@master/css-language-service",
         "build:type": "tsc --emitDeclarationOnly --preserveWatchOutput --outDir dist",
-        "build": "npm run build:cjs && npm run build:type",
-        "dev": "npm run build -- --watch",
+        "build": "conc 'npm:build:*'",
+        "dev": "conc 'npm:build:* -- --watch'",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
         "test": "jest"
