--- a/examples/vue-with-runtime-rendering/package.json
+++ b/examples/vue-with-runtime-rendering/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "master-css-in-vue",
+    "name": "vue-with-runtime-rendering",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -9,13 +9,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "vue": "^3.2.45"
+        "@master/css.vue": "",
+        "vue": "^3.2.47"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^4.0.0",
-        "typescript": "^4.9.3",
-        "vite": "^4.0.0",
-        "vue-tsc": "^1.0.11",
-        "@master/css-extractor.vite": ""
+        "@vitejs/plugin-vue": "^4.1.0",
+        "typescript": "^5.0.2",
+        "vite": "^4.3.9",
+        "vue-tsc": "^1.4.2"
     }
 }
