--- a/examples/vue.js-with-progressive-rendering/package.json
+++ b/examples/vue.js-with-progressive-rendering/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vue-with-progressive-rendering",
+    "name": "vue.js-with-progressive-rendering",
     "private": true,
     "version": "0.0.0",
     "type": "module",
