--- a/packages/extractor.vite/package.json
+++ b/packages/extractor.vite/package.json
@@ -32,7 +32,7 @@
         "vite-plugin"
     ],
     "sideEffects": false,
-    "main": "./dist/index.js",
+    "main": "./dist/index.bundle.js",
     "types": "./dist/index.d.ts",
     "files": [
         "dist"
