--- a/examples/react-with-progressive-rendering/package.json
+++ b/examples/react-with-progressive-rendering/package.json
@@ -7,7 +7,7 @@
         "dev": "node server",
         "build": "npm run build:client && npm run build:server",
         "build:client": "vite build --outDir dist/client",
-        "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+        "build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server",
         "generate": "vite build --outDir dist/static && npm run build:server && node prerender",
         "serve": "NODE_ENV=production node server",
         "debug": "node --inspect-brk server"
