--- a/examples/vue.js-with-static-extraction/package.json
+++ b/examples/vue.js-with-static-extraction/package.json
@@ -5,17 +5,23 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vue-tsc && vite build",
-        "preview": "vite preview"
+        "build": "run-p type-check build-only",
+        "preview": "vite preview",
+        "build-only": "vite build",
+        "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
     },
     "dependencies": {
         "vue": "^3.2.47"
     },
     "devDependencies": {
         "@master/css-extractor.vite": "",
+        "@tsconfig/node18": "^2.0.1",
+        "@types/node": "^18.16.17",
         "@vitejs/plugin-vue": "^4.1.0",
-        "typescript": "^5.0.2",
+        "@vue/tsconfig": "^0.4.0",
+        "npm-run-all": "^4.1.5",
+        "typescript": "^5.1.6",
         "vite": "^4.3.9",
-        "vue-tsc": "^1.4.2"
+        "vue-tsc": "^1.6.5"
     }
 }
