--- a/examples/vue.js-with-static-extraction/tsconfig.node.json
+++ b/examples/vue.js-with-static-extraction/tsconfig.node.json
@@ -1,12 +1,17 @@
 {
+    "extends": "@tsconfig/node18/tsconfig.json",
+    "include": [
+        "vite.config.*",
+        "vitest.config.*",
+        "cypress.config.*",
+        "nightwatch.conf.*",
+        "playwright.config.*"
+    ],
     "compilerOptions": {
         "composite": true,
-        "skipLibCheck": true,
         "module": "ESNext",
-        "moduleResolution": "bundler",
-        "allowSyntheticDefaultImports": true
-    },
-    "include": [
-        "vite.config.ts"
-    ]
+        "types": [
+            "node"
+        ]
+    }
 }
