--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -1,7 +1,8 @@
 {
     "name": "@master/css",
     "scripts": {
-        "build": "techor-pack --shakable",
+        "build": "techor-pack",
+        "postbuild": "npm link ./ --no-save",
         "dev": "npm run build -- --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
@@ -41,20 +42,20 @@
         "mastercss"
     ],
     "sideEffects": false,
-    "main": "./dist/index.js",
-    "jsnext:main": "./dist/index.mjs",
-    "esnext": "./dist/index.mjs",
-    "module": "./dist/index.mjs",
-    "browser": "./dist/index.browser.js",
+    "main": "./dist/index.bundle.js",
+    "jsnext:main": "./dist/index.bundle.mjs",
+    "esnext": "./dist/index.bundle.mjs",
+    "module": "./dist/index.bundle.mjs",
+    "browser": "./dist/index.browser.bundle.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
             "browser": {
-                "import": "./dist/index.mjs",
+                "import": "./dist/index.bundle.mjs",
                 "types": "./dist/index.browser.d.ts"
             },
-            "require": "./dist/index.js",
-            "import": "./dist/index.mjs",
+            "require": "./dist/index.bundle.js",
+            "import": "./dist/index.bundle.mjs",
             "types": "./dist/index.d.ts"
         }
     },
@@ -62,22 +63,20 @@
         "dist"
     ],
     "bin": {
-        "mcss": "./dist/cjs/bin/index.js",
-        "mastercss": "./dist/cjs/bin/index.js"
+        "mcss": "./dist/bin/index.bundle.js",
+        "mastercss": "./dist/bin/index.bundle.js"
     },
     "publishConfig": {
         "access": "public"
     },
     "dependencies": {
         "@master/normal.css": "",
-        "@techor/fs": "^2.2.8",
-        "@techor/log": "^2.2.8",
+        "@techor/fs": "^2.3.7",
+        "@techor/log": "^2.3.7",
         "commander": "^10.0.0"
     },
     "devDependencies": {
-        "@techor/extend": "^2.2.8",
-        "pretty-bytes": "^6.1.0",
-        "pretty-hrtime": "^1.0.3",
+        "@techor/extend": "^2.3.7",
         "vite": "^4.2.1",
         "shared": ""
     }
