--- a/packages/extractor.webpack/package.json
+++ b/packages/extractor.webpack/package.json
@@ -30,7 +30,7 @@
         "webpack-plugin"
     ],
     "sideEffects": false,
-    "main": "./dist/index.js",
+    "main": "./dist/index.bundle.js",
     "types": "./dist/index.d.ts",
     "files": [
         "dist"
