--- a/packages/extractor/package.json
+++ b/packages/extractor/package.json
@@ -2,6 +2,7 @@
     "name": "@master/css-extractor",
     "scripts": {
         "build": "techor-pack --platform node",
+        "postbuild": "npm link ./ --no-save",
         "dev": "npm run build -- --watch",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
@@ -30,20 +31,20 @@
         "mastercss"
     ],
     "sideEffects": false,
-    "main": "./dist/index.js",
-    "module": "./dist/index.mjs",
-    "jsnext:main": "./dist/index.mjs",
-    "esnext": "./dist/index.mjs",
+    "main": "./dist/index.bundle.js",
+    "module": "./dist/index.bundle.mjs",
+    "jsnext:main": "./dist/index.bundle.mjs",
+    "esnext": "./dist/index.bundle.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/index.mjs",
-            "require": "./dist/index.js",
+            "import": "./dist/index.bundle.mjs",
+            "require": "./dist/index.bundle.js",
             "types": "./dist/index.d.ts"
         },
         "./options": {
-            "import": "./dist/options/index.mjs",
-            "require": "./dist/options/index.js",
+            "import": "./dist/options/index.bundle.mjs",
+            "require": "./dist/options/index.bundle.js",
             "types": "./dist/options/index.d.ts"
         }
     },
@@ -61,8 +62,8 @@
         "dist"
     ],
     "bin": {
-        "mcss-extract": "./dist/bin/index.js",
-        "mastercss-extract": "./dist/bin/index.js"
+        "mcss-extract": "./dist/bin/index.bundle.js",
+        "mastercss-extract": "./dist/bin/index.bundle.js"
     },
     "publishConfig": {
         "access": "public"
@@ -70,11 +71,11 @@
     "dependencies": {
         "@master/css": "",
         "@master/css-validator": "",
-        "@techor/extend": "^2.2.8",
-        "@techor/log": "^2.2.8",
+        "@techor/extend": "^2.3.7",
+        "@techor/log": "^2.3.7",
         "chokidar": "^3.5.3",
         "commander": "^10.0.1",
-        "explore-config": "^2.2.8",
+        "explore-config": "^2.3.7",
         "fast-glob": "^3.2.12",
         "minimatch": "^9.0.1",
         "upath": "^2.0.1"
