--- a/packages/theme-service/package.json
+++ b/packages/theme-service/package.json
@@ -1,7 +1,7 @@
 {
     "name": "theme-service",
     "scripts": {
-        "build": "techor-pack --shakable",
+        "build": "techor-pack",
         "dev": "npm run build -- --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
@@ -29,20 +29,20 @@
         "mastercss"
     ],
     "sideEffects": false,
-    "main": "./dist/index.js",
-    "jsnext:main": "./dist/index.mjs",
-    "esnext": "./dist/index.mjs",
-    "module": "./dist/index.mjs",
-    "browser": "./dist/index.browser.js",
+    "main": "./dist/index.bundle.js",
+    "jsnext:main": "./dist/index.bundle.mjs",
+    "esnext": "./dist/index.bundle.mjs",
+    "module": "./dist/index.bundle.mjs",
+    "browser": "./dist/index.browser.bundle.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
             "browser": {
-                "import": "./dist/index.mjs",
+                "import": "./dist/index.bundle.mjs",
                 "types": "./dist/index.browser.d.ts"
             },
-            "require": "./dist/cjs/index.js",
-            "import": "./dist/esm/index.mjs",
+            "require": "./dist/index.bundle.js",
+            "import": "./dist/index.bundle.mjs",
             "types": "./dist/index.d.ts"
         }
     },
@@ -53,6 +53,6 @@
         "access": "public"
     },
     "devDependencies": {
-        "@techor/extend": "^2.2.8"
+        "@techor/extend": "^2.3.7"
     }
 }
