--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css.vue",
     "scripts": {
-        "build:esm": "techor-pack ./src/**/*.{ts,vue} --format esm --esm-ext .js --no-bundle",
+        "build:esm": "techor-pack './src/**/*.{ts,vue}' --bundle --format esm --esm-ext .js --entry-names [dir]/[name] --no-declare",
         "build:type": "vue-tsc --declaration --emitDeclarationOnly",
         "build": "conc 'npm:build:*'",
         "dev": "conc 'npm:build:* -- --watch'",
@@ -63,6 +63,7 @@
     "devDependencies": {
         "@vue/compiler-sfc": "^3.3.4",
         "@vue/tsconfig": "^0.4.0",
-        "vue-tsc": "^1.8.3"
+        "typescript": "^5.1.6",
+        "vue-tsc": "^1.8.4"
     }
 }
