--- a/packages/vue/tsconfig.json
+++ b/packages/vue/tsconfig.json
@@ -12,7 +12,7 @@
         ],
         "skipLibCheck": true,
         /* Bundler mode */
-        "moduleResolution": "bundler",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
