--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -4,7 +4,7 @@
         "build:esm": "techor-pack './src/**/*.{ts,vue}' --bundle --format esm --esm-ext .js --entry-names [dir]/[name] --no-declare",
         "build:type": "vue-tsc --declaration --emitDeclarationOnly",
         "build": "conc 'npm:build:*'",
-        "dev": "conc 'npm:build:* -- --watch'",
+        "dev": "npm run build:esm -- --watch",
         "type-check": "vue-tsc --noEmit",
         "lint": "eslint src",
         "test": "jest"
