Update dependency graph

--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
     "private": true,
     "scripts": {
         "postinstall": "husky install && npm ls --link=true",
-        "build": "turbo run build",
+        "build": "npm run build:packages && npm run build:examples",
+        "build:packages": "turbo run build --filter=./packages/**/* && npm i",
+        "build:examples": "turbo run build --filter=./examples/**/*",
         "build:clean": "rm -rf ./packages/**/*dist && turbo run build --force --no-cache --filter=./packages/**/*",
         "check": "npm run commit-check && npm run build && turbo run test lint type-check --parallel --filter=./packages/**/*",
         "test": "turbo run test --parallel",
         "lint": "turbo run lint --parallel --filter=./packages/**/*",
         "type-check": "turbo run type-check --parallel --filter=./packages/**/*",
         "commit-check": "commitlint --from=HEAD~1 --verbose",
-        "dev": "turbo run dev --filter=./packages/* --force",
+        "dev": "turbo run dev --filter=./packages/* --parallel --no-cache",
         "clean": "rm -rf package-lock.json && rm -rf node_modules && rm -rf ./packages/**/*dist && rm -rf ./{examples,packages}/**/*node_modules && rm -rf ./{examples,packages}/**/*.turbo"
     },
     "repository": {
@@ -22,8 +24,8 @@
         "shared/"
     ],
     "devDependencies": {
-        "@techor/jest-dom": "^2.3.7",
-        "@techor/repo": "^2.3.7",
+        "@techor/jest-dom": "^2.3.8",
+        "@techor/repo": "^2.3.8",
         "@types/jest": "^29.5.0",
         "concurrently": "^8.2.0",
         "eslint-plugin-react-hooks": "^4.6.0",
