--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -2,8 +2,7 @@
     "name": "@master/css-renderer",
     "scripts": {
         "build": "techor-pack --platform node",
-        "postbuild": "npm link ./ --no-save",
-        "dev": "npm run build -- --watch",
+        "dev": "npm run build -- --watch --no-declare",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
         "test": "jest --forceExit --detectOpenHandles"
@@ -43,9 +42,9 @@
     },
     "dependencies": {
         "@master/css": "",
-        "@techor/log": "^2.3.7",
+        "@techor/log": "^2.3.8",
         "commander": "^10.0.1",
-        "explore-config": "^2.3.7",
+        "explore-config": "^2.3.8",
         "fast-glob": "^3.2.12"
     },
     "devDependencies": {
