--- a/packages/svelte/tsconfig.json
+++ b/packages/svelte/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "@tsconfig/svelte/tsconfig.json",
     "compilerOptions": {
+        "composite": true,
         "ignoreDeprecations": "5.0",
         "outDir": "src",
         "declaration": true,
@@ -14,4 +15,12 @@
         "__sapper__/*",
         "public/*"
     ],
+    "references": [
+        {
+            "path": "../css"
+        },
+        {
+            "path": "../theme-service"
+        }
+    ]
 }
