--- a/packages/extractor.vite/package.json
+++ b/packages/extractor.vite/package.json
@@ -2,7 +2,7 @@
     "name": "@master/css-extractor.vite",
     "scripts": {
         "build": "techor-pack --platform node",
-        "dev": "npm run build -- --watch",
+        "dev": "npm run build -- --watch --no-declare",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
         "test": "jest --forceExit --detectOpenHandles"
