--- a/packages/extractor.vite/tsconfig.json
+++ b/packages/extractor.vite/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "composite": true,
         "baseUrl": "."
     },
     "include": [
@@ -8,5 +9,13 @@
     ],
     "exclude": [
         "src/**/*.test.*"
+    ],
+    "references": [
+        {
+            "path": "../css"
+        },
+        {
+            "path": "../validator"
+        }
     ]
 }
