--- a/packages/server.nitro/tsconfig.json
+++ b/packages/server.nitro/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "composite": true,
         "baseUrl": ".",
         "rootDir": "src"
     },
@@ -9,5 +10,10 @@
     ],
     "exclude": [
         "src/**/*.test.*"
+    ],
+    "references": [
+        {
+            "path": "../css"
+        }
     ]
 }
