--- a/packages/theme-service/package.json
+++ b/packages/theme-service/package.json
@@ -2,7 +2,7 @@
     "name": "theme-service",
     "scripts": {
         "build": "techor-pack",
-        "dev": "npm run build -- --watch",
+        "dev": "npm run build -- --watch --no-declare",
         "test": "jest",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
@@ -53,6 +53,6 @@
         "access": "public"
     },
     "devDependencies": {
-        "@techor/extend": "^2.3.7"
+        "@techor/extend": "^2.3.8"
     }
 }
