--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -2,7 +2,7 @@
     "name": "@master/css-validator",
     "scripts": {
         "build": "techor-pack --platform node",
-        "dev": "npm run build -- --watch",
+        "dev": "npm run build -- --watch --no-declare",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
         "test": "jest --forceExit --detectOpenHandles"
