--- a/packages/vscode-language-service/tsconfig.json
+++ b/packages/vscode-language-service/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "composite": true,
         "baseUrl": ".",
     },
     "include": [
@@ -8,5 +9,10 @@
     ],
     "exclude": [
         "src/**/*.test.*"
+    ],
+    "references": [
+        {
+            "path": "../language-server"
+        }
     ]
 }
