--- a/turbo.json
+++ b/turbo.json
@@ -2,12 +2,12 @@
     "$schema": "https://turbo.build/schema.json",
     "pipeline": {
         "dev": {
-            "cache": false,
-            "dependsOn": [
-                "^build"
-            ],
             "outputs": [
-                "dist/**"
+                "dist/**",
+                ".next/**",
+                ".svelte-kit/**",
+                ".nuxt/**",
+                ".output/**"
             ]
         },
         "build": {
@@ -15,7 +15,11 @@
                 "^build"
             ],
             "outputs": [
-                "dist/**"
+                "dist/**",
+                ".next/**",
+                ".svelte-kit/**",
+                ".nuxt/**",
+                ".output/**"
             ]
         },
         "test": {
@@ -35,7 +39,11 @@
         "type-check": {
             "cache": false,
             "outputs": [
-                "dist/**"
+                "dist/**",
+                ".next/**",
+                ".svelte-kit/**",
+                ".nuxt/**",
+                ".output/**"
             ]
         }
     }
